--- a/src/app.css
+++ b/src/app.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
     /* because elm won't allow us to style the body element. */
     body {
-        @apply bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-200 flex flex-col min-h-screen;
+        @apply bg-white-100 dark:bg-black-500 text-black-500 dark:text-white-100 transition-colors duration-200 flex flex-col min-h-screen;
     }
 }
-
